--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.exlservice.com/resources/assets/front/ico/favicon.ico" />
+    <!-- <link rel="icon" href="https://www.google.co.in/url?sa=i&url=https%3A%2F%2Ficonape.com%2Fexl-logo-logo-icon-svg-png.html&psig=AOvVaw3fcRNkh6-kHfdDan51LCPE&ust=1631715115401000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCNjh4c_S_vICFQAAAAAdAAAAABAD" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- to refresh the page every 30 seconds -->
+    <!-- <meta http-equiv="refresh" content="30"/> -->
+    <!-- to refresh the page every 30 seconds -->
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -17,7 +20,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"> -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
